# postgresql

./: .gitignore  README.md  pyproject.toml
psql/: config.py  database.py  main.py
